examples/test/testpolicy15431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15431
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key45: value28
      key20: value37
      key28: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value27
          key16: value9
      podSelector:
        matchLabels:
          key4: value15
          key19: value12
          key46: value9
